# particle-dynamics

./: .gitignore  CMakeLists.txt  config.json  config_cache.json  features.md
apps/: ideal_gas_visualizer_app.cpp  main.cpp
config/test/: config_invalid.json  config_test.json
config/visualizer/: config.json  config_cache.json
include/core/: histogram.h  particle.h  particle_container.h
include/visualizer/: ideal_gas_visualizer.h
src/core/: histogram.cc  particle.cc  particle_container.cc
src/visualizer/: ideal_gas_visualizer.cc
test/: test_histogram.cc  test_particle_container.cc
tests/: test_histogram.cc
